force-app/main/default/objects/Pokemon__c/fields/Poke_Id__c.field-meta.xml
<CustomField>
    <fullName>Poke_Id__c</fullName>
    <externalId>true</externalId>
    <label>Poke Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>