force-app/main/default/objects/Pokemon__c/fields/Sprite__c.field-meta.xml
<CustomField>
    <fullName>Sprite__c</fullName>
    <formula>IMAGE( SpriteURL__c,  Name  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sprite</label>
    <type>Text</type>
</CustomField>