force-app/main/default/objects/Pokemon__c/fields/SpriteURL__c.field-meta.xml
<CustomField>
    <fullName>SpriteURL__c</fullName>
    <label>SpriteURL</label>
    <type>Url</type>
</CustomField>